--- a/e-web/500.html
+++ b/e-web/500.html
@@ -56,7 +56,7 @@
 		<div class="notfoundImg">
 			<img src="images/notfound.png" alt="图片加载中..." width="100%">
 		</div>
-		<div class="notfoundTxt">这里放错误提示消息</div>
+		<div class="notfoundTxt">对不起，出错了！</div>
 	</div>
 </div>
 <script type="text/javascript">
