--- a/e-web/pickExpress.html
+++ b/e-web/pickExpress.html
@@ -13,6 +13,18 @@
     <script src="js/jweixin-1.2.0.js" type="text/javascript"></script>
     <script src="layer/layer.js"></script>
     <script type="text/javascript">
+
+    var token=window.localStorage.getItem("token");
+        console.log(token)
+        $.ajaxSetup({ //发送请求前触发
+            contentType:'application/json',
+            dataType:'json',
+            beforeSend: function (xhr) { //可以设置自定义标头
+                console.log("ajax beforesend token:", token)
+                xhr.setRequestHeader('Authorization', "Bearer "+token);
+            }
+        })  
+
         $.ajax({
             url: "wxconf.do",
             type: "GET",
@@ -105,24 +117,34 @@
             //alert("点击的取件码是:"+code);
             var windowId = layer.load();
 
-            $.getJSON("/wx/updateStatus.do", {code: code}, function (data) {
-                layer.msg(data.result);
-                $("#expUserInfoCont").html("");
-                layer.close(windowId);
-                if (type == 0) {
-                    getExpress();
+            $.ajax({
+                type:'put',
+                url:'http://localhost:8080/e/wxExpress/updateStatus',
+                data:code,
+                success:function(data){
+                    layer.msg(data.msg);
+                    $("#expUserInfoCont").html("");
+                    layer.close(windowId);
+                    if (type == 0) {
+                        getExpress();
+                    }
                 }
             })
-
+            
         }
 
         function find() {
             var windowId = layer.load();
             var code = $("#expPickUserId").val();
-            $.getJSON("/wx/findExpressByCode.do", {code: code}, function (data) {
+            if(code==null||code==""){
+                layer.close(windowId)
+                layer.msg("取件码不能为空");
+                return;
+            }
+            $.getJSON("http://localhost:8080/e/wxExpress/findByCode/"+code,null, function (data) {
                 layer.close(windowId);
-                layer.msg(data.result);
-                if (data.status == 0) {
+                if (data.code == 200) {
+                    layer.msg(data.msg);
                     $("#expUserInfoCont").html("");
                     var express = data.data;
                     var item = "<div class=\"expInfoCont status1\">\n" +
@@ -144,10 +166,13 @@
                         "\t\t\t\t<button class=\"btn-success\" onclick=\"updateStatus('" + express.code + "',1)\">确认收货</button>\n" +
                         "\t\t\t</div>\n" +
                         "\t\t</div>";
-                    $("#expUserInfoCont").append($(item));
-                }
-            });
-        }
+                        $("#expUserInfoCont").append($(item));
+                    }else{
+                        $("#expUserInfoCont").remove();
+                        layer.msg(data.data);
+                    }
+                });
+            }
 
         /*function updateStatus2(){
             var windowId = layer.load();
@@ -267,11 +292,11 @@
             <div class="headerNavIcon headerNavIconOut"><span></span><span></span></div>
         </div>
         <div class="headerNavCont">
-            <a href="../index.html">快递首页</a>
-            <a href="../userhome.html">个人中心</a>
-            <a href="../delivery.html">送货上门</a>
-            <a href="../lazyboard.html">懒人排行</a>
-            <a href="../expassistant.html">快递助手</a>
+            <a href="/index.html">快递首页</a>
+            <a href="/userhome.html">个人中心</a>
+            <a href="/delivery.html">送货上门</a>
+            <a href="/lazyboard.html">懒人排行</a>
+            <a href="/expassistant.html">快递助手</a>
         </div>
     </div>
 
