--- a/e-web/wxUserhome.html
+++ b/e-web/wxUserhome.html
@@ -113,12 +113,12 @@
 	<div class="headerNav">
 		<div class="headerNavTop"><div class="headerNavIcon headerNavIconOut"><span></span><span></span></div></div>
 		<div class="headerNavCont">
-			<a href="./index.html">快递首页</a>
-			<a href="./userhome.html">个人中心</a>
-			<a href="./delivery.html">送货上门</a>
-		<!-- 	<a href="./sendexpress.html">我要寄件</a> -->
-			<a href="./lazyboard.html">懒人排行</a>
-			<a href="./expassistant.html">快递助手</a>
+			<a href="/index.html">快递首页</a>
+			<a href="/userhome.html">个人中心</a>
+			<a href="/delivery.html">送货上门</a>
+			<a href="/sendexpress.html">我要寄件</a>
+			<a href="/lazyboard.html">懒人排行</a>
+			<a href="/expassistant.html">快递助手</a>
 		</div>
 	</div>
 
@@ -128,7 +128,7 @@
 				<div class="headerImg">
 					<img src="images/userHeadImg.jpg" alt="正在加载中..." width="100%">
 				</div>
-				<p>姓名</p>
+				<p id="name">姓名</p>
 			</div></a>
 			<div class="headerProm">
 				<p>请及时完善个人信息，方便快递员配送</p>
@@ -150,10 +150,47 @@
 	</div>
 
 	<div class="footer">
-		<p class="copyInfotxt">&copy;新职课版权所有</p>
+		<p class="copyInfotxt">&copy;王小虎版权所有</p>
 	</div>
 </div>
+<script src="layer/layer.js"></script>
 <script type="text/javascript">
+	var token=window.localStorage.getItem("token");
+	console.log(token)
+	 $.ajaxSetup({ //发送请求前触发
+		contentType:'application/json',
+		dataType:'json',
+		beforeSend: function (xhr) { //可以设置自定义标头
+			console.log("ajax beforesend token:", token)
+			xhr.setRequestHeader('Authorization', "Bearer "+token);
+		}
+	})  
+
+	var windowId = layer.load();
+	$(function(){
+		$.ajax({
+			type:'post',
+			url:'http://localhost:8080/e/wxUser/userInfo',
+			success:function(data){
+					userPhone = data.data;
+					if(data.code == 200){
+						layer.close(windowId);
+						// layer.msg("欢迎您："+userPhone);
+						$("#name").text(data.data.userName)
+					}else{
+						layer.close(windowId);
+						window.location.href="/login.html"
+					}
+						
+				},
+			error:function(data){
+				layer.close(windowId);
+				layer.msg("无法访问服务！");
+				window.location.href="/500.html"
+			}
+		})
+	});
+
 	$(function() {
 		var pageContextVal = $("#PageContext").val();
 		var initFun = function(){
